{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 29,
  "lineage": "030dd622-401a-3bd1-b10a-a8ba3f97edd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-ec2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20d88b0021158c6",
            "arn": "arn:aws:ec2:us-east-2:498692135370:instance/i-050576c3bc3427aa4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile-role",
            "id": "i-050576c3bc3427aa4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c9809c57f21b0ba",
            "private_dns": "ip-69-69-1-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "69.69.1.36",
            "public_ip": "3.15.137.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0314f0511d6dd9c50",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07752b21069dc457b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074b6a6fe34d6d998",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07752b21069dc457b"
            ]
          },
          "dependencies": [
            "aws_eks_cluster.my_eks_cluster",
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion_role",
            "aws_iam_role.eks_cluster_role",
            "aws_key_pair.terra-keypair",
            "aws_security_group.arch-sg",
            "aws_subnet.arch-pub-sub-1",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc",
            "data.aws_ami.amazon_linux_2023",
            "local_file.private_key_pem",
            "tls_private_key.pri-terra-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arch-igw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:internet-gateway/igw-04ae634c40ede9a9d",
            "id": "igw-04ae634c40ede9a9d",
            "owner_id": "498692135370",
            "tags": {
              "Name": "dellhoak-igw"
            },
            "tags_all": {
              "Name": "dellhoak-igw"
            },
            "vpc_id": "vpc-03acbe524a4edef54"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:route-table/rtb-02662d6755532d66e",
            "id": "rtb-02662d6755532d66e",
            "owner_id": "498692135370",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ae634c40ede9a9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dellhoak-MRT"
            },
            "tags_all": {
              "Name": "dellhoak-MRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03acbe524a4edef54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06206226ac26cee53",
            "route_table_id": "rtb-02662d6755532d66e",
            "subnet_id": "subnet-074b6a6fe34d6d998"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-1",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06eea23da6b4bfc4f",
            "route_table_id": "rtb-02662d6755532d66e",
            "subnet_id": "subnet-093125ffe9feabaed"
          },
          "dependencies": [
            "aws_internet_gateway.arch-igw",
            "aws_route_table.public_route",
            "aws_subnet.arch-pub-sub-2",
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch-sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:security-group/sg-07752b21069dc457b",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07752b21069dc457b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "arch-sg",
            "name_prefix": "",
            "owner_id": "498692135370",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dellhoak-sg"
            },
            "tags_all": {
              "Name": "dellhoak-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03acbe524a4edef54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-1",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-074b6a6fe34d6d998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "69.69.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074b6a6fe34d6d998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pub-sub-1"
            },
            "tags_all": {
              "Name": "dellhoak-pub-sub-1"
            },
            "vpc_id": "vpc-03acbe524a4edef54"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arch-pub-sub-2",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:subnet/subnet-093125ffe9feabaed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "69.69.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093125ffe9feabaed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498692135370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dellhoak-pub-sub-2"
            },
            "tags_all": {
              "Name": "dellhoak-pub-sub-2"
            },
            "vpc_id": "vpc-03acbe524a4edef54"
          },
          "dependencies": [
            "aws_vpc.arch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arch-vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:498692135370:vpc/vpc-03acbe524a4edef54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "69.69.0.0/16",
            "default_network_acl_id": "acl-0fdde0be85d006611",
            "default_route_table_id": "rtb-0fb0d381a31f50f72",
            "default_security_group_id": "sg-0b04fa0715b773b9a",
            "dhcp_options_id": "dopt-01e9e4b5c9482d1d7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03acbe524a4edef54",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb0d381a31f50f72",
            "owner_id": "498692135370",
            "tags": {
              "Name": "dellhoak-vpc"
            },
            "tags_all": {
              "Name": "dellhoak-vpc"
            }
          }
        }
      ]
    }
  ]
}